--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container flex-lg-column">
           <a class="navbar-brand mx-lg-auto" href="#"><span class="h3 fw-bold d-block d-lg-none">Loyiso Ndlovu</span>
-        <img src="images/1660164303752.jpeg" alt="" class="d-none d-lg-block rounded-circle"></a>
+        <img src="images\loyisoProfile.JPG" alt="" class="d-none d-lg-block rounded-circle"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
           </button>
