--- a/index.html
+++ b/index.html
@@ -469,14 +469,14 @@
                         Loyiso Ndlovu Inc
                     </p>
                 </div>
-                <div class="col-auto">
+                <!-- <div class="col-auto">
                     <div class="social-icons">
                         <a href="#"><i class="lab la-twitter"></i></a>
                         <a href="#"><i class="lab la-instagram"></i></a>
                         <a href="#"><i class="lab la-facebook"></i></a>
                         <a href="#"><i class="lab la-github"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>    
     </footer>
