--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <p class="text-brand mb-2">
                                     2021 - 2022
                                 </p>
-                                <p class="mb-0">I lead the social marketing campign. As a small team we had to go above and beyond in order to thrive. My experience here solidified my Work ethic.</p>
+                                <p class="mb-0">I lead the social marketing campaign. As a small team we had to go above and beyond in order to thrive. My experience here solidified my Work ethic.</p>
                             </div>
                         </div>
                         <div class="col-12" data-aos="fade-up" data-aos-delay="600">
